--- a/src/wave.css
+++ b/src/wave.css
@@ -7,7 +7,7 @@ body, html, #root {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #a6e1fa;
+    background: white;
   }
   
   .App {
