finish display change effect

--- a/src/picture_throw.css
+++ b/src/picture_throw.css
@@ -16,3 +16,22 @@ canvas {
 .picture-throw p {
   color: #999;
 }
+
+@keyframes zoomOutAndFade {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(3);
+    opacity: 0;
+  }
+}
+
+.zoom-out {
+  animation: zoomOutAndFade 5s forwards;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
